--- a/vue3/package.json
+++ b/vue3/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "pinia": "^2.3.1",
+    "sass-embedded": "^1.83.4",
+    "scss": "^0.2.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
