--- a/Webpack/WebPack_Code/package.json
+++ b/Webpack/WebPack_Code/package.json
@@ -12,5 +12,13 @@
   "devDependencies": {
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "css-loader": "^7.1.2",
+    "less": "^4.2.2",
+    "less-loader": "^12.2.0",
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0"
   }
 }
